test_files/syntax_errors/MissingMethodBraces.java
public class MissingMethodBraces {
    public static void main(String[] args) 
        number = 4; // @error - syntax (Missing opening and closing brace for the main method)
        System.out.println(number);
}